fixed overflow

--- a/src/CSS/media.css
+++ b/src/CSS/media.css
@@ -1,4 +1,10 @@
 /*media*/
+@media (max-width: 786px){
+  body, html {
+  overflow-x: hidden!important;
+  }
+  }
+
 
 @media screen and (max-width: 768px){
   .cabecalho-nav{
